Homepage feature section alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4926,4 +4926,8 @@ figure.snip1390 blockquote:before {
     left: -30px;
   }
 }
+
+.pl-5{
+  padding-left: 120px;
+}
 /*Testimonials End*/
